--- a/src/app/gst-get/gst-get.component.html
+++ b/src/app/gst-get/gst-get.component.html
@@ -14,7 +14,7 @@
       <td>{{ business.business_name }}</td>
       <td>{{ business.business_gst_number }}</td>
       <td><a [routerLink]="['edit', business._id]" class="btn btn-primary">Edit</a></td>
-      <td><a (click)="deleteBusiness(business._id)" class="btn btn-danger">Delete</a>
+      <td><a (click)="deleteBusiness(business._id)" class="btn btn-danger">DELETE</a>
     </tr>
   </tbody>
 </table>
