--- a/src/app/gst-edit/gst-edit.component.html
+++ b/src/app/gst-edit/gst-edit.component.html
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-md-4">Business Name </label>
+        <label class="col-md-4">Business Name!!! </label>
         <input type="text" class="form-control" formControlName="business_name" #business_name
           [(ngModel)]="business.business_name" />
       </div>
